<resources>
    <string name="app_name">Weather Logger</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clearCashe">Clear Cache</string>
    <string name="action_Test">test</string>
    <string name="appwidget_text">Weather Logger</string>
    <string name="add_widget">Add widget</string>
    <string name="current_label">Current</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind</string>
</resources>
