...
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        android:layout_margin="5dp"

        android:padding="5dp"
        tools:ignore="MissingDefaultResource"
        android:id="@+id/AR_CardView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="horizontal">
...
