...
android:layout_width="match_parent"
android:layout_height="match_parent"

tools:context=".ui.mainActivityMVP.MainActivity"
    >
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    />



...
